deployments/templates/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yjb-platform-helloworld
  labels:
    app: yjb-platform-helloworld
spec:
  replicas: 3
  selector:
    matchLabels:
      app: yjb-platform-helloworld # this should match the selector in service.yml
  template:
    metadata:
      labels:
        app: yjb-platform-helloworld # this should match the selector in service.yml
    spec:
      containers:
        - name: yjb-platform-helloworld
          image: ${REGISTRY}/${REPOSITORY}:${IMAGE_TAG}
          ports:
            - containerPort: 8080
