deployments/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: yjb-platform-helloworld-service
spec:
  selector:
    app: yjb-platform-helloworld # this should match the pod label in deployment.yml
  ports:
    - name: https
      port: 8080
      targetPort: 8080
