deployments/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yjb-platform-helloworld-ingress
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: yjb-platform-helloworld-ingress-${NAMESPACE}-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
spec:
  ingressClassName: default
  tls:
    - hosts:
        - helloworld.${NAMESPACE}.apps.live.cloud-platform.service.justice.gov.uk
  rules:
    - host: helloworld.${NAMESPACE}.apps.live.cloud-platform.service.justice.gov.uk
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: yjb-platform-helloworld-service # this should match the metadata.name in service.yml
                port:
                  number: 8080
